--- a/style.css
+++ b/style.css
@@ -177,14 +177,20 @@ h2 {
   margin-left: 30px;
 }
 
-.project-card a{
+.projectbutton{
+  width: fit-content;
+  color: white;
+  background-color: #2F659F;
+  padding: 15px;
   color: blue;
   text-decoration: underline;
 }
-.project-card a:hover{
+
+.projectbutton:hover{
   cursor: pointer;
   text-weight: bolder;
 }
+
 /* Contact*/
 
 .footer {
@@ -197,12 +203,6 @@ h2 {
   font-family: "Merriweather", Helvetica, Arial, Verdana, "Gill Sans", serif;
 }
 
-.projectbutton{
-  width: fit-content;
-  color: white;
-  background-color: #2F659F;
-  padding: 15px;
-}
 .footer img {
   width:50px;
   float: left;
