--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ h2 {
   font-weight: bolder;
 }
 
+.projectbutton a{
+  color:white;
+  text-decoration: underline;
+}
 /* Contact*/
 
 .footer {
