--- a/style.css
+++ b/style.css
@@ -179,6 +179,11 @@ h2 {
   margin-left: 30px;
 }
 
+.buttons {
+  display: inline;
+  margin-left: 30px;
+}
+
 .projectbutton{
   width: fit-content;
   color: white;
@@ -187,7 +192,7 @@ h2 {
   background-color: #2F659F;
   padding: 10px;
   text-decoration: underline;
-  display: row;
+  display: inline;
 }
 
 .projectbutton:hover{
