margins for buttons

--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ h2 {
 .project-card li {
   font-size: 20px;
   margin-left: 30px;
+  margin-bottom: 20px;
 }
 
 .buttons {
@@ -189,6 +190,7 @@ h2 {
   color: white;
   font-size: 20px;
   margin-left: 30px;
+  margin-top: 20px;
   background-color: #2F659F;
   padding: 10px;
   text-decoration: underline;
