--- a/style.css
+++ b/style.css
@@ -184,9 +184,8 @@ h2 {
 }
 
 .projectbutton{
-  width: fit-content;
+  width: 75px;
   color: white;
-  font-size: 20px;
   margin-left: 30px;
   margin-top: 20px;
   background-color: #2F659F;
@@ -202,6 +201,7 @@ h2 {
 
 .projectbutton a{
   color:white;
+  font-size: 20px;
   text-decoration: underline;
 }
 /* Contact*/
