--- a/style.css
+++ b/style.css
@@ -180,12 +180,11 @@ h2 {
 
 
 .projectbutton{
-  width: 75px;
+  width: 130px;
   margin-left: 30px;
   background-color: #2F659F;
-  margin-top: 20px;
   padding: 10px;
-  display: inline;
+  display: inline-block;
 }
 
 .projectbutton:hover{
@@ -193,7 +192,7 @@ h2 {
   font-weight: bolder;
 }
 
-.projectbutton a{
+a{
   color:white;
   font-size: 17px;
 }
