--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ h2 {
   font-size: 30px;
   margin-top: 30px;
   margin-bottom: 5px;
-  animation-duration: 5s;
   position: relative;
 }
 
@@ -77,6 +76,7 @@ h2 {
 
 .about-me {
   display: flex;
+  flex-direction: row;
   
 }
 
@@ -89,14 +89,16 @@ h2 {
 #about-me p {
   font-size: 30px;
   color: rgb(128, 128, 128);
-  margin-top: -1cm;
   text-align: justify;
+  margin-top: -.5cm;
+
   text-justify: inter-word;
   
 }
 
 .profile_image {
-  width: 300px;
+  width: 200px;
+  padding:20px;
   margin: bottom -0.5cm;
 
 }
@@ -110,19 +112,20 @@ h2 {
 }
 
 .skill {
-  border: 1px solid rgb(64, 64, 85);
+  
   display: block;
   border-radius: 6px;
   text-align: center;
   margin: 20px;
   padding: 10px;
-  width: 2in;
+  width: fit-content;
   font-size: 20px;
-  box-shadow: 0 3px 10px gray;
+  
 }
 
 .skill img {
-  height: 200px;
+  border-radius: 6px;
+  height: 100px;
   align-items: center;
 }
 
@@ -196,22 +199,57 @@ a{
   color:white;
   font-size: 17px;
 }
+
 /* Contact*/
 
 .footer {
+  height: 11mm;
   background-color:  #2F659F;
-  padding-top: 20px;
+  padding-left: 30px;
+  padding-top: 10px;
   padding-bottom: 20px;
-  height: 10mm;
-  font-size: 35px;
+  font-size: 40px;
   color: rgb(212, 238, 242);
   font-family: "Merriweather", Helvetica, Arial, Verdana, "Gill Sans", serif;
+  display: flex;
+  flex-direction: row;
+  align-items: left;
 }
 
-.footer img {
-  width:50px;
-  float: left;
+.footer p {
+font-size: small;
+}
+.contacticons {
+  display: flex;
+  height: 60px;;
+  
+}
+.envelopebutton{
   margin-left: 30px;
+  margin-bottom:10px;
+  padding: 0px;
+  cursor: pointer;
+}
+
+.envelopebutton img{
+  width: 55px;
+  height: 55px;
+  padding:0;
+}
+
+.linkbutton{
+  margin-left: 30px;
+  margin-bottom:10px;
+  margin-top: 3px;
+  cursor: pointer;
+}
+
+/* Email address */
+#email {
+  font-size: 20px;
+  margin-top: 10px;
+  display: none;
+  text-decoration: underline;
 }
 /* Scroll to Top Button */
 
