--- a/style.css
+++ b/style.css
@@ -6,43 +6,79 @@ body {
 
 /* Navigation Bar */
 
-#home {
+nav {
   background-color:  #2F659F;
-  padding-bottom: 1cm;
+  padding-bottom: 1rem;
   margin-left:-1cm;
   margin-right:-1cm;
   margin-top:-1cm;
-  padding-top: 1.5cm;
-  height: 12mm;
- }
+  padding-top: 3rem; 
+  overflow: hidden;
+  height: 5rem;
+  
+}
 
-.topmenu {
+.container-menu {
+  float: right;
+  padding-right: 1cm;
+ 
+}
+
+.menulink {
   color:rgb(212, 238, 242);
   margin: 10px;
+  padding-top: 3rem ;
   padding: 20px;
-  font-size: 40px;
+  font-size: 2rem;
   text-decoration:none;
   font-family: "Merriweather", Helvetica, Arial, Verdana, "Gill Sans", serif;
 }
 
-.topmenu:hover {
+.menulink:hover {
   color: white;
   font-weight: bold;
   text-decoration: underline;
 }
 
-.topdiv {
-  float: right;
-  padding-right: 1cm;
+.icon {
+  display: none;
 }
 
+/* W3School: When the screen is less than 600 pixels wide, hide all navigation bar links. 
+Show the link that should open and close the menu (.icon) */
+@media screen and (max-width: 1068px) {
+  .menulink {display: none;}
+  .icon {
+    float: right;
+    display: block;
+  }
+}
+/* W3School: The "responsive" class is added to the menu with JavaScript when the user clicks on the icon. 
+This class makes the menu look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .nav.responsive {position: relative;}
+  .container-menu a.icon {
+    position: absolute;
+    right: 10;
+    top: 0;
+  }
+  .container-menu.responsive {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .menulink.responsive {
+    float: none;
+    text-align: right;
+  }
+}
 .profile_name {
   float: left;
   padding-left: 2cm;
   font-family: "Great Vibes", "Brush Script MT", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
   font-style: italic;
   color:rgb(212, 238, 242);
-  font-size: 60px;
+  font-size: 4rem;
 }
 
 /* Titles */
@@ -96,8 +132,9 @@ h2 {
   
 }
 
-.profile_image {
+picture img{
   width: 200px;
+  height:auto;
   padding:20px;
   margin: bottom -0.5cm;
 
