--- a/style.css
+++ b/style.css
@@ -94,9 +94,11 @@ h2 {
 }
 
 #about-me h1 {
-  font-size: 50px;
+  font-size: 45px;
   margin-top: 30px;
   color:  #2F659F;
+  text-align: center;
+  font-family: "Merriweather", Helvetica, Arial, Verdana, "Gill Sans", serif;
 }
 
 #about-me p {
@@ -113,7 +115,7 @@ picture img{
   width: 200px;
   height:auto;
   padding:20px;
-  margin: bottom -0.5cm;
+  margin-top: 45px;
 
 }
 
