--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ h2 {
   color: rgb(128, 128, 128);
   text-align: justify;
   margin-top: -.5cm;
+  padding-bottom: 10px;
 
   text-justify: inter-word;
   
