--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ h2 {
 }
 
 #about-me p {
-  font-size: .75rem;
+  font-size: 1rem;
   color: rgb(128, 128, 128);
   text-align: justify;
   margin-top: -.5cm;
